# scikit_build_example

./: .gitignore  CMakeLists.txt  main.cpp  pyproject.toml
.github/workflows/: wheels.yml
src/: main.cpp
src/cary_build_example/: __init__.py
src/scikit_build_example/: __init__.py
src/wrappers/python/: CMakeLists.txt  main.cpp
src/wrappers/python/Hello/: __init__.py
tests/: test_basic.py
